--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "bcrypt-ts": "^3.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "json-serve": "^0.1.0",
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.0"
